shortened contact form to avoid overflow

--- a/src/app/aboutme/aboutme.component.scss
+++ b/src/app/aboutme/aboutme.component.scss
@@ -29,7 +29,7 @@
             width: 30px;
             background-color: #2dfcd8;
             padding: 15px;
-            animation: imageRotation 5s infinite linear;
+            // animation: imageRotation 5s infinite linear;
         }
         span {
             color: white;
@@ -45,14 +45,14 @@
     }
 }
 
-@keyframes imageRotation {
-    0%{
-        transform: rotateY(0deg);
-      }
-      100%{
-        transform: rotateY(360deg);
-      }
-    }
+// @keyframes imageRotation {
+//     0%{
+//         transform: rotateY(0deg);
+//       }
+//       100%{
+//         transform: rotateY(360deg);
+//       }
+//     }
 
 .profile-pic {
     margin-left: 0;
