--- a/src/app/contactform/contactform.component.scss
+++ b/src/app/contactform/contactform.component.scss
@@ -1,11 +1,10 @@
 .contactform-container {
-    height: 100vh;
+    height: 85vh;
     width: 100vw;
     display: flex;
     flex-direction: column;
     align-items: center;
     align-items: center;
-
     padding-top: 40px;
 }
 
